[metadata]
name = posgar_to_gps_MOKOCCHI
version = 0.0.1
author = Jose Arcidiacono
author_email = j2arcidiacono@outlook.com
description = A tool for converting from POSGAR to GPS (lat, long)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mokocchi/posgar_to_gps
project_urls =
    Bug Tracker = https://github.com/mokocchi/posgar_to_gps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src